# pkg/handlers/leaderboard.go
@@ -9,8 +9,21 @@ import (
 	"github.com/Excel-MEC/excelplay-backend-kryptos/pkg/httperrors"
 )
 
+// Only for swagger documentation, do not use in code.
+type swag_user struct {
+	Name      string `json:"name" example:"Aswin G"`
+	CurrLevel int    `json:"curr_level" example:"18"`
+}
+
 // GetLeaderboard returns all the users ordered in descending order of level,
 // and for users on the same level, in the ascending order of last submission time.
+// @Summary return leaderboard.
+// @Description Sends back the leaderboard in descending order of level, and for users on the same level, in the ascending order of last successful submission time.
+// @Tags Kryptos
+// @Produce json
+// @Success 200 {object} swag_user "Returns the leaderboard"
+// @Failure 500 {string} string "Could not serialize json"
+// @Router /api/leaderboard [get]
 func GetLeaderboard(db *database.DB, config *env.Config) httperrors.Handler {
 	return func(w http.ResponseWriter, r *http.Request) *httperrors.HTTPError {
 		var users []database.User
